--- a/app/views/users/sign_in.erb
+++ b/app/views/users/sign_in.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>Sign In</h2>
-  <form name="user" action="/user/signin" method="post">
+  <form name="user" action="/users/signin" method="post">
     <input name="email" type="email" placeholder="enter email">
     <input name="password" type="password" placeholder="password">
     <input type="submit" value="Sign In">
