--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,7 +3,20 @@
   width: 600px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
+  /*background-color: #e54739;*/
+  background-color: rgba(238, 121, 112, 0.9);
+  text-align: center;
+  color: #fff;
+  margin: 35% auto;
 }
 th {
   text-align: left;
+}
+
+body{
+  background-image: url('http://poachedmag.com/wp-content/uploads/2013/07/highres_220796602.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  background-attachment: fixed;
 }
