--- a/app/views/talks/all_talks.erb
+++ b/app/views/talks/all_talks.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  
+  <a href="/users/<%=session[:user].id%>/new_talk"> Give your own talk! </a>
+
   <h2>All upcoming talks</h2>
   <ul>
   <% @talks.each do |talk| %>
