--- a/app/views/talks/single_talk.erb
+++ b/app/views/talks/single_talk.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2><%=@talk.title%></h2>
   <block><%=@talk.description%></block>
-  <p> Come to this talk! It's going down on <%=@talk.scheduled_date%> at <%=@talk.scheduled_time%> </p>
+  <p> Come to this talk! It's going down on <%=@talk.event_time%>
   <button><a href="/talks/<%=@talk.id%>/edit">Edit this page</a></button>
 </div>
