--- a/app/views/users/new_talk.erb
+++ b/app/views/users/new_talk.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <form action="/users/>" method="post">
+  <form action="/submit" method="post">
     <h4> Name your talk. </h4>
     <input cols="40" type="text" name="title" placeholder="e.g. Version Control in the GitHub Era">
     <br>
