User has ability to create talks and tags - associations made via post '/submit' handler. Also added a number of helpers

--- a/app/views/talks/edit_single_talk.erb
+++ b/app/views/talks/edit_single_talk.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <form action="/" method="post">
+  <form action="/talk/<%=@talk.id%>" method="post">
 
     <h4> Edit talk name. </h4>
     <input cols="40" type="text" name="title" placeholder="<%=@talk.title%>">
