--- a/app/views/users/view_other_user.erb
+++ b/app/views/users/view_other_user.erb
@@ -6,7 +6,7 @@
   <ul>
   <% @talks.each do |talk| %>
   <li>
-    <a href="/talks/<%=talk.id%>"><%= talk.title%></a> by <a href="users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a>
+    <a href="/talks/<%=talk.id%>"><%= talk.title%></a> by <a href="/users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a>
   </li><br>
   <%end%>
 </div>
