Added nav bar (yes, ripped off CSS styles) and added about page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,6 +21,12 @@
   <title></title>
 </head>
 <body>
+  <nav id="cssmenu"> 
+  <ul>
+   <li><a href="/about"><span> About</span> </a> </li>
+   <li><a href="/"><span>Sign In / Out</span></a><li>
+ </ul>
+ </nav>
   <%= yield %>
 </body>
 </html>
