--- a/app/views/users/sign_in.erb
+++ b/app/views/users/sign_in.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1> DBCLightning </h1>
   <h2>Sign In</h2>
   <form name="user" action="/users/signin" method="post">
     <input name="email" type="email" placeholder="enter email">
