--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,7 @@
   <nav>
     <form id="search_bar" method="get" action="">
       <input name="search" placeholder="Search">
-      <input type="submit" value="Search">
+      <input class="button" type="submit" value="Search">
     </form>
   </nav>
   <%= yield %>
