--- a/app/views/users/sign_in.erb
+++ b/app/views/users/sign_in.erb
@@ -3,7 +3,7 @@
   <form name="user" action="/users/signin" method="post">
     <input name="email" type="email" placeholder="enter email">
     <input name="password" type="password" placeholder="password">
-    <input type="submit" value="Sign In">
+    <input class="button" type="submit" value="Sign In">
   </form>
   <%if @invalid_login %>
   <h3 style="color:red">*** Either Your Username is Wrong, Your Password is Wrong, or Everything is Wrong. ***</h3>
