--- a/public/css/application.css
+++ b/public/css/application.css
@@ -24,7 +24,7 @@ body{
 }
 
 nav {
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   background-color: #e54739;
   height: 50px;
   /*position: absolute;*/
@@ -32,5 +32,47 @@ nav {
 
 #search_bar{
   padding-top: 12px;
+  padding-right: 15px;
   text-align: right;
+}
+
+.button {
+	border-radius: 3px;
+	border: 1px solid #fff;
+	color: #fff;
+	overflow: hidden;
+}
+
+.button:active {
+	border-color: #17954c;
+	color: #17954c;
+}
+
+.button:hover {
+	background: #e54739;
+}
+
+.button:before {
+	position: absolute;
+	height: 100%;
+	font-size: 125%;
+	line-height: 3.5;
+	color: #fff;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.button:active:before {
+	color: #17954c;
+}
+
+/* Button 4a */
+.buttona:before {
+	left: 130%;
+	top: 0;
+}
+
+.buttona:hover:before {
+	left: 80%;
 }
