--- a/app/views/talks/all_talks.erb
+++ b/app/views/talks/all_talks.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  
+
   <a href="/users/<%=session[:user].id%>/new_talk"> Give your own talk! </a>
 
   <h2>All upcoming talks</h2>
-  <ul>
+  <ul class="imglist">
   <% @talks.each do |talk| %>
   <li>
     <a href="/talks/<%=talk.id%>"><%= talk.title%></a> by <a href="/users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a>
