--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,13 +6,18 @@
   background-color: rgba(238, 121, 112, 0.9);
   text-align: center;
   color: #fff;
-  margin: 10% auto;
+  margin: 5% auto;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 th {
   text-align: left;
+}
+
+#navigation{
+  float: left;
+  margin-top: 12px;
 }
 
 body{
@@ -36,23 +41,23 @@ nav {
   text-align: right;
 }
 
-.button {
+.button2 {
 	border-radius: 3px;
 	border: 1px solid #fff;
 	color: #fff;
 	overflow: hidden;
 }
 
-.button:active {
+.button2:active {
 	border-color: #17954c;
 	color: #17954c;
 }
 
-.button:hover {
+.button2:hover {
 	background: #e54739;
 }
 
-.button:before {
+.button2:before {
 	position: absolute;
 	height: 100%;
 	font-size: 125%;
@@ -63,17 +68,17 @@ nav {
 	transition: all 0.3s;
 }
 
-.button:active:before {
+.button2:active:before {
 	color: #17954c;
 }
 
 /* Button 4a */
-.buttona:before {
+.button2a:before {
 	left: 130%;
 	top: 0;
 }
 
-.buttona:hover:before {
+.button2a:hover:before {
 	left: 80%;
 }
 
@@ -124,4 +129,79 @@ nav {
   font-size: 30px;
   color: white;
   text-align: center;
+}
+
+.own_talk{
+  text-align: center;
+  font-size: 25px;
+}
+
+body { text-align: center; padding: 40px; background: #F5F5F5; }
+.container { width: 500px; text-align: center; margin: auto;}
+.copyright { margin-top: 50px; font-size: 12px; text-transform: uppercase; }
+.copyright a { text-decoration: none; padding: 5px;background: #c0392b; color: #FFFFFF; }
+.copyright a:hover { background: transparent; color: #c0392b; }
+
+.button {
+  display: inline-block;
+  height: 50px;
+  line-height: 50px;
+  padding-right: 30px;
+  padding-left: 70px;
+  position: relative;
+  background-color:rgb(41,127,184);
+  color:rgb(255,255,255);
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+
+
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  text-shadow:0px 1px 0px rgba(0,0,0,0.5);
+-ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ff123852,Positive=true)";zoom:1;
+filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ff123852,Positive=true);
+
+  -moz-box-shadow:0px 2px 2px rgba(0,0,0,0.2);
+  -webkit-box-shadow:0px 2px 2px rgba(0,0,0,0.2);
+  box-shadow:0px 2px 2px rgba(0,0,0,0.2);
+  -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=2,Color=#33000000,Positive=true)";
+filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=2,Color=#33000000,Positive=true);
+}
+
+.button span {
+  position: absolute;
+  left: 0;
+  width: 50px;
+  background-color:rgba(0,0,0,0.5);
+
+  -webkit-border-top-left-radius: 5px;
+-webkit-border-bottom-left-radius: 5px;
+-moz-border-radius-topleft: 5px;
+-moz-border-radius-bottomleft: 5px;
+border-top-left-radius: 5px;
+border-bottom-left-radius: 5px;
+border-right: 1px solid  rgba(0,0,0,0.15);
+}
+
+.button:hover span, .button.active span {
+  background-color:rgb(0,102,26);
+  border-right: 1px solid  rgba(0,0,0,0.3);
+}
+
+.button:active {
+  margin-top: 2px;
+  margin-bottom: 13px;
+
+  -moz-box-shadow:0px 1px 0px rgba(255,255,255,0.5);
+-webkit-box-shadow:0px 1px 0px rgba(255,255,255,0.5);
+box-shadow:0px 1px 0px rgba(255,255,255,0.5);
+-ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ccffffff,Positive=true)";
+filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ccffffff,Positive=true);
+}
+
+.button.orange {
+  background: #FF7F00;
 }
