--- a/app/views/talks/all_talks.erb
+++ b/app/views/talks/all_talks.erb
@@ -1,6 +1,6 @@
 
 <div class="own_talk">
-  <a class= "button orange active" href="/users/<%=session[:user].id%>/new_talk"> Give your own talk! </a>
+  <a class= "button orange active" href="/users/<%=current_user.id%>/new_talk"> Give your own talk! </a>
 </div>
 
 <div class="container">
