--- a/app/views/users/new_talk.erb
+++ b/app/views/users/new_talk.erb
@@ -14,7 +14,7 @@
     <input type="date" name="dateof" min="<%=Time.now.to_s[0..9] %>">
     <input type="time" name="timeof" min="09:00" max="17:00">
     <h4>How many guests will make it worth your time?</h4>
-    <input type="number" placeholder="ex. 5" min="1" max="65">
+    <input name="min_rsvp" type="number" selected="1" placeholder="ex. 5" min="1" max="65">
     <h4> Tag your talks up! </h4>
     <input type="text" name="tags" placeholder="e.g. #GitHub #VersionControl">
     <br><br>
