--- a/app/views/users/view_other_user.erb
+++ b/app/views/users/view_other_user.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  
-  <a href="/users/<%=session[:user].id%>/new_talk"> Give your own talk! </a>
+
+  <a href="/users/<%=current_user.id%>/new_talk"> Give your own talk! </a>
 
   <h2>You are viewing talks by <%= @user.first_name + " " + @user.last_name%> </h2>
 
