Added tags views / fixed button view on user profile view page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,6 +23,7 @@
   <nav>
     <div id="navigation">
     <% if logged_in? %>
+    <button class="button2"><a href="/talks">Home</a></button>
     <button class="button2"><a href="/signout">Signout</a></button>
     <% end %>
     <button class="button2"><a href="/about">About</a></button>
