--- a/app/views/talks/single_talk.erb
+++ b/app/views/talks/single_talk.erb
@@ -5,36 +5,44 @@
   <br>
   <block><%=@talk.description%></block>
   <p> Come to this talk! It's going down on <%=@talk.event_time.to_s[0..9] + " at " + datetime_am_pm(@talk.event_time) + "!" %>
-  <% if @talk.current_votes < @talk.min_rsvp %>
-    <p id="vote_counter"> <%= @talk.current_votes.to_s + " out of " + @talk.min_rsvp.to_s + " votes to go live!" %> </p>
-  <% else %>
-    <p id="vote_counter"> <%= "Lightning! " + @talk.current_votes.to_s + " out of " + @talk.min_rsvp.to_s + " votes - we're live!" %> </p>
-  <% end %>
-  <% if current_user.id == @talk.speaker.id%>
-    <button class="button"><a href="/talks/<%=@talk.id%>/edit">Edit this talk</a></button>
-    <button class="button">
-     <form method="post" action="/talks/<%=@talk.id%>">
-       <input type="hidden" name="_method" value="DELETE">
-       <input type="submit" value="Delete this talk">
-     </form>
-  <% end %>
-  <br>
-
-  <% if current_user.events.find_by_talk_id(@talk.id).attending == false %>
-    <button class="up_vote" id="<%=@talk.id%>"> ATTENDING </button>
-    <button class="down_vote" id="<%=@talk.id%>" disabled> NOT ATTENDING </button>
-  <% end %>
-  <% if current_user.events.find_by_talk_id(@talk.id).attending == true %>
-    <button class="up_vote" id="<%=@talk.id%>" disabled> ATTENDING </button>
-    <button class="down_vote" id="<%=@talk.id%>"> NOT ATTENDING </button>
-  <% end %>
-  <p> <strong> Here's all the DBC students attending this talk: </strong></p>
-  <% @users.each do |user| %>
-    <%= user.events.find_by(talk_id: @talk.id).attending == true %> 
-    <% if user.events.find_by(talk_id: @talk.id).attending == true %>
-      <image src = "http://www.gravatar.com/avatar/<%=gravatar_hash(user.email)%>" >
+    <p><% @tags.each do |tag| %>
+      #<a href="/tags/<%=tag.id%>/talks"><%=tag.name %> &nbsp
+    <% end %></p><br>
+    <% if @talk.current_votes < @talk.min_rsvp %>
+      <p id="vote_counter"> <%= @talk.current_votes.to_s + " out of " + @talk.min_rsvp.to_s + " votes to go live!" %> </p>
+    <% else %>
+      <p id="vote_counter"> <%= "Lightning! " + @talk.current_votes.to_s + " out of " + @talk.min_rsvp.to_s + " votes - we're live!" %> </p>
     <% end %>
-  <% end %>
+
+    <% if current_user.id == @talk.speaker.id%>
+      <button class="button"><a href="/talks/<%=@talk.id%>/edit">Edit this talk</a></button>
+      <button class="button">
+        <form method="post" action="/talks/<%=@talk.id%>">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Delete this talk">
+        </form></br>
+      </button>
+    <% end %>
+
+    <% if current_user.id != @talk.speaker.id%>
+      <% if current_user.events.find_by_talk_id(@talk.id).attending == false %>
+        <button class="up_vote" id="<%=@talk.id%>"> ATTENDING </button>
+        <button class="down_vote" id="<%=@talk.id%>" disabled> NOT ATTENDING </button>
+      <% end %>
+
+      <% if current_user.events.find_by_talk_id(@talk.id).attending == true %>
+        <button class="up_vote" id="<%=@talk.id%>" disabled> ATTENDING </button>
+        <button class="down_vote" id="<%=@talk.id%>"> NOT ATTENDING </button>
+      <% end %>
+    <% end %>
 
 
+    <p><strong> Here's all the DBC students attending this talk: </strong></p>
+    <% @users.each do |user| %>
+      <% if user.events.find_by(talk_id: @talk.id) %>
+        <% if user.events.find_by(talk_id: @talk.id).attending == true %>
+          <image src = "http://www.gravatar.com/avatar/<%=gravatar_hash(user.email)%>" >
+        <% end %>
+      <% end %>
+    <% end %>
 </div>
