--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,7 +3,8 @@
   width: 600px;
   padding: 5px 20px 20px 20px;
   /*border: 1px solid black;*/
-  background-color: rgba(238, 121, 112, 0.9);
+  background-color: navy;
+  /*rgba(238, 121, 112, 0.9);*/
   text-align: center;
   color: #fff;
   margin: 5% auto;
