Fixed dbc logo and changed font

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,8 @@
     See: http://necolas.github.com/normalize.css/
   -->
   <link rel="stylesheet" href="/css/normalize.css">
+ <link href='http://fonts.googleapis.com/css?family=Glegoo|Istok+Web' rel='stylesheet' type='text/css'>
+
   <!--
     application.css is where you put your styles
   -->
