MOre css and resolved some logic issues related to html issues

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -36,7 +36,7 @@
       <input class="button2" type="submit" value="Search">
     </form>
   </div>
-  </nav
+  </nav>
   <%= yield %>
 </body>
 </html>
