--- a/public/css/application.css
+++ b/public/css/application.css
@@ -9,8 +9,7 @@
   width: 600px;
   padding: 5px 20px 20px 20px;
   /*border: 1px solid black;*/
-  background-color: navy;
-  /*rgba(238, 121, 112, 0.9);*/
+  background-color: rgba(51, 51, 51, 0.4);
   text-align: center;
   color: #fff;
   margin: 5% auto;
@@ -140,7 +139,7 @@ nav {
 }
 
 .imglist li a:hover{
-  color: gray;
+  color: #02a9b9;
   padding:2px;
   border:none 0px #000000;
   -moz-border-radius: 3px;
@@ -225,5 +224,7 @@ filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ccfffff
 }
 
 .button.orange {
-  background: #FF7F00;
+  top: 15px;
+  background: #02a9b9;
+  padding-left: 30px;
 }
