--- a/public/css/application.css
+++ b/public/css/application.css
@@ -38,7 +38,7 @@ body{
 
 nav {
   border-bottom: 1px solid black;
-  background-color: #e54739;
+  background-color: #333;
   height: 50px;
   /*position: absolute;*/
 }
@@ -63,6 +63,10 @@ nav {
   text-align: right;
 }
 
+a:visited{
+  color: white;
+}
+
 .button2 {
 	border-radius: 3px;
 	border: 1px solid #fff;
@@ -76,7 +80,7 @@ nav {
 }
 
 .button2:hover {
-	background: #e54739;
+	background: #02a9b9;
 }
 
 .button2:before {
@@ -168,7 +172,7 @@ nav {
   height: 50px;
   line-height: 50px;
   padding-right: 30px;
-  padding-left: 70px;
+  padding-left: 30px;
   position: relative;
   background-color:rgb(41,127,184);
   color:rgb(255,255,255);
