--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,7 +31,7 @@
     <button class="button2"><a href="/about">About</a></button>
   </div>
   <div>
-    <form id="search_bar" method="get" action="">
+    <form action="/search" id="search_bar" method="post">
       <input name="search"  placeholder="Search">
       <input class="button2" type="submit" value="Search">
     </form>
