Fixed nil class bug by adding conditional in single talk view. Also added some padding in css two center some buttons

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,7 +31,7 @@
     <button class="button2"><a href="/about">About</a></button>
   </div>
   <div>
-    <form action="/search" id="search_bar" method="post">
+    <form style="padding-right: 25px;" action="/search" id="search_bar" method="post">
       <input name="search"  placeholder="Search">
       <input class="button2" type="submit" value="Search">
     </form>
