--- a/app/views/talks/single_talk.erb
+++ b/app/views/talks/single_talk.erb
@@ -24,7 +24,7 @@
       </button>
     <% end %>
 
-    <% if current_user.id != @talk.speaker.id%>
+    <% if current_user.id != @talk.speaker.id && current_user.events.find_by_talk_id(@talk.id) != nil %>
       <% if current_user.events.find_by_talk_id(@talk.id).attending == false %>
         <button class="up_vote" id="<%=@talk.id%>"> ATTENDING </button>
         <button class="down_vote" id="<%=@talk.id%>" disabled> NOT ATTENDING </button>
