--- a/app/views/talks/all_talks.erb
+++ b/app/views/talks/all_talks.erb
@@ -9,14 +9,15 @@
   <ul class="imglist">
   <% @talks.each do |talk| %>
   <% email = gravatar_hash(talk.speaker.email)%>
-  <li>
-    <div id=prof_pic>
-    <image src="http://www.gravatar.com/avatar/<%=email%>">
+  <li id="talk_list">
+    <div id="talk_body">
+      <div id="prof_pic">
+        <image src="http://www.gravatar.com/avatar/<%=email%>">
+      </div>
+      <a href="/talks/<%=talk.id%>"><%= talk.title.capitalize%></a><br>
+        by <a href="/users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a></br>
+        <p class="subtitle"><%=talk.event_time.to_s[0..9] + " at " + datetime_am_pm(talk.event_time)%></p>
     </div>
-    <a href="/talks/<%=talk.id%>"><%= talk.title.capitalize%></a><br>
-     by <a href="/users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a></br>
-     <p class="subtitle"><%=talk.event_time.to_s[0..9] + " at " + datetime_am_pm(talk.event_time)%></p>
-
     <% vote_color = "under_vote" if talk.current_votes < talk.min_rsvp.to_i %>
     <% vote_color = "over_vote" if talk.current_votes >= talk.min_rsvp.to_i %>
     <% vote_color = "medium_vote" if (talk.current_votes.to_f / talk.min_rsvp.to_f) >= 0.5 && (talk.current_votes.to_f / talk.min_rsvp.to_f) < 1.0 %>
