--- a/app/views/users/view_other_user.erb
+++ b/app/views/users/view_other_user.erb
@@ -9,10 +9,10 @@
 
   <image src = "http://www.gravatar.com/avatar/<%=@email%>" >
 
-  <ul>
+  <ul class="imglist">
   <% @talks.each do |talk| %>
   <li>
-    <a href="/talks/<%=talk.id%>"><%= talk.title%></a> by <a href="/users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a>
+    <a href="/talks/<%=talk.id%>"><%= talk.title.upcase%></a> by <a href="/users/<%=talk.speaker.id%>"><%=talk.speaker.first_name + " " + talk.speaker.last_name %></a>
   </li><br>
   <%end%>
 </div>
