--- a/public/css/application.css
+++ b/public/css/application.css
@@ -5,18 +5,20 @@
 
 
 .container {
-  margin: 20px auto;
+  margin: 0px auto;
+  padding-top: 5%;
   width: 600px;
-  padding: 5px 20px 20px 20px;
+  /*padding: 5px 20px 20px 20px;*/
   /*border: 1px solid black;*/
   background-color: rgba(51, 51, 51, 0.4);
   text-align: center;
   color: #fff;
-  margin: 5% auto;
+  /*margin: 5% auto;*/
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
+
 th {
   text-align: left;
 }
@@ -25,6 +27,14 @@ th {
   float: left;
   margin-top: 12px;
   padding-left: 25px;
+  text-decoration: none;
+
+}
+
+#view_other_user li{
+  border: 1px solid black;
+  background-color: rgba(238, 238, 238, 1);
+  list-style-type: none;
 }
 
 body{
@@ -41,7 +51,9 @@ nav {
   border-bottom: 1px solid black;
   background-color: #333;
   height: 50px;
-  /*position: absolute;*/
+  width: 100%;
+  position: fixed;
+  z-index: 5;
 }
 
 #under_vote {
@@ -112,6 +124,12 @@ a:visited{
 #prof_pic {
   float: left;
   margin-top: auto;
+  padding-left: 10%;
+  margin-right:-10%;
+}
+#prof_pic img {
+  border-radius: 40px;
+
 }
 
 .subtitle{
@@ -124,8 +142,13 @@ a:visited{
   margin:0px;
 }
 .imglist{
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+#talk_body {
+  padding-left:-10%;
+  padding-right:3%;
 }
 
 .imglist li{
@@ -135,12 +158,16 @@ a:visited{
   padding:0px;
   list-style:url(/images/arrow.png);
   line-height:30px;
+  list-style-type: none;
   /*border: 1px solid black;*/
+}
+a:link{
+    text-decoration: none;
 }
 
 .imglist li a:link, .imglist li a:visited{
   color: white;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 .imglist li a:hover{
@@ -163,9 +190,15 @@ a:visited{
   text-align: center;
 }
 
+li#talk_list {
+  margin-left:0px;
+  padding:0px;
+}
+
 .own_talk{
   text-align: center;
   font-size: 25px;
+  padding-top: 5%;
 }
 
 .button {
