--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,6 +27,7 @@
     <% if logged_in? %>
     <button class="button2"><a href="/talks">Home</a></button>
     <button class="button2"><a href="/signout">Signout</a></button>
+    <button class="button2"><a href="/users/edit/<%=current_user.id%>">Change Password</a></button>
     <% end %>
     <button class="button2"><a href="/about">About</a></button>
   </div>
