--- a/app/views/users/sign_in.erb
+++ b/app/views/users/sign_in.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <h2>Sign In</h2>
+  <h2>Sign In Boot!</h2>
   <form name="user" action="/users/signin" method="post">
-    <input name="email" type="email" placeholder="enter email">
+    <input name="email" type="email" placeholder="email">
     <input name="password" type="password" placeholder="password">
     <input class="button" type="submit" value="Sign In">
   </form>
