--- a/app/views/users/new_talk.erb
+++ b/app/views/users/new_talk.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <form action="/submit" method="post">
     <h4> Name your talk. </h4>
-    <input cols="40" type="text" name="title" placeholder="e.g. Version Control in the GitHub Era">
+    <input maxlength="40" cols="40" type="text" name="title" placeholder="e.g. Version Control in the GitHub Era">
     <br>
 
     <h4>Give us a little abstract.</h4>
