--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,6 +30,9 @@
     <button class="button2"><a href="/users/edit/<%=current_user.id%>">Change Password</a></button>
     <% end %>
     <button class="button2"><a href="/about">About</a></button>
+    <% if logged_in? %>
+      &nbsp <%= "You are logged in as #{current_user.email}" %>
+    <% end %>
   </div>
   <div>
     <form style="padding-right: 25px;" action="/search" id="search_bar" method="post">
