--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -1,8 +1,12 @@
+
+<div class="container">
 <p>DBCLightning is a web application whose purpose is to create an avenue
    for students to give and attend 10-20 minute "lightning" talks about areas
    in technology they care deeply about.
    The application was built using the Sinatra framework.</p>
 
-<p>You can find the repository for the application <a href="https://github.com/kaiprt/DBCLightning">here</a>.
+<p>You can find the repository for the application <a href="https://github.com/kaiprt/DBCLightning" style= "color: blue">here</a>.
    The site was a collaborative effort among Kai Prout, Armen Vartan,
    Brendan Susens-Jackson, Natalie Baer and Ben Brostoff.</p>
+
+</div>
