--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,8 +24,8 @@
 <body>
   <nav>
     <div id="navigation">
+    <button class="button2"><a href="/">Home</a></button>
     <% if logged_in? %>
-    <button class="button2"><a href="/talks">Home</a></button>
     <button class="button2"><a href="/signout">Signout</a></button>
     <button class="button2"><a href="/users/edit/<%=current_user.id%>">Change Password</a></button>
     <% end %>
