--- a/app/views/users/view_other_user.erb
+++ b/app/views/users/view_other_user.erb
@@ -7,7 +7,7 @@
 
   <h2>You are viewing talks by <%= @user.first_name + " " + @user.last_name%> </h2>
 
-  <image src = "http://www.gravatar.com/avatar/<%=@email%>" >
+  <image class="profile" src="http://www.gravatar.com/avatar/<%=@email%>" >
 
   <ul class="imglist">
   <% @talks.each do |talk| %>
